<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/set_chooser"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/color_primary_dark"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/set_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:contentDescription="@string/cd_set_arrow"
                android:rotation="180"
                android:src="@drawable/arrow_up"/>

            <TextView
                android:id="@+id/set_chooser_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="Theros"/>

            <ImageButton
                android:id="@+id/cards_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cd_cards_sort"
                android:src="@drawable/card_order"
                android:tint="@android:color/white"/>

            <ImageButton
                android:id="@+id/cards_view_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cd_cards_view_type"
                android:src="@drawable/cards_list_type"
                android:tint="@android:color/white"/>

        </LinearLayout>

        <com.dbottillo.mtgsearchfree.ui.views.MTGCardsView
            android:id="@+id/cards_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/set_chooser"/>

        <View
            android:id="@+id/set_list_bg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/set_chooser"
            android:background="@color/color_primary_dark"
            android:clickable="true"/>

        <ListView
            android:id="@+id/set_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/set_chooser"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/white"/>

        <LinearLayout
            android:id="@+id/main_tooltip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/set_chooser"
            android:background="@color/color_accent_dark"
            android:gravity="center_vertical"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageButton
                android:id="@+id/main_tooltip_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:contentDescription="@string/cd_close"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_close"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="@string/main_fragment_tooltip"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/cd_tooltip_arrow"
                android:src="@drawable/tooltip_main_arrow"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>