<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/base_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_sort_option"/>

    <RadioGroup
        android:id="@+id/sort_option_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin">

        <RadioButton
            android:id="@+id/sort_option_az"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_az"/>

        <RadioButton
            android:id="@+id/sort_option_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_set_number"/>

    </RadioGroup>


</LinearLayout>