<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/card_list"
        tools:listitem="@layout/row_card"
        android:layout_height="match_parent"
        android:layout_width="match_parent"/>

</FrameLayout>