<RelativeLayout
    android:id="@+id/card_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <com.dbottillo.mtgsearchfree.ui.views.MTGLoader
        android:id="@+id/grid_item_card_loader"
        android:layout_centerInParent="true"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <com.dbottillo.mtgsearchfree.ui.views.MTGCardImageView
        android:id="@+id/grid_item_card_image"
        tools:src="@drawable/ic_file_download_black_24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>
